--- a/app/src/main/res/layout/activity_browse_locations.xml
+++ b/app/src/main/res/layout/activity_browse_locations.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <FrameLayout
         android:id="@id/browse_locations_activity_frame_layout"
