--- a/app/src/main/res/layout/fragment_add_location.xml
+++ b/app/src/main/res/layout/fragment_add_location.xml
@@ -4,18 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@id/fragment_add_location_enter_city_edit_text"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:hint="@string/enter_a_city_e_g_london" />
+        android:hint="@string/enter_a_city_e_g_london">
 
-    <Button
-        android:id="@id/fragment_add_location_button"
-        android:layout_width="wrap_content"
+        <EditText
+            android:id="@id/fragment_add_location_enter_city_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/add_new_location" />
+        android:layout_margin="10sp"
+        android:elevation="2dp">
+
+        <Button
+            android:id="@id/fragment_add_location_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="@string/add_new_location" />
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
