Added some design features, added WeatherResponse caching, if there is internet connection, pull from API, else pull from local Database

--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="240dp"
+    android:background="@color/lightBlue"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_margin="10sp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:text="@string/drawer_header_text_view"/>
+        android:text="@string/drawer_header_text_view"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 </LinearLayout>
