--- a/app/src/main/res/layout/forecast_weather_item.xml
+++ b/app/src/main/res/layout/forecast_weather_item.xml
@@ -1,64 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="2dp">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        card_view:cardCornerRadius="2dp"
-        card_view:contentPadding="10dp">
+        android:background="@color/lightBlue"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@id/weather_display_current_temperature_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/weather_fragment_center_linear_layout"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="35sp" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:id="@id/forecast_fragment_wind_details_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/weather_fragment_center_linear_layout"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@id/forecast_view_temperature_text_view"
-                android:layout_width="match_parent"
+                android:id="@id/weather_display_wind_text_view"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@id/forecast_view_pressure_text_view"
-                android:layout_width="match_parent"
+                android:id="@id/weather_display_wind_direction_text_view"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@id/weather_display_detailed_description_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/forecast_fragment_humidity_and_pressure_details_linear_layout"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+
+        <LinearLayout
+            android:id="@id/weather_fragment_center_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@id/forecast_view_wind_text_view"
-                android:layout_width="match_parent"
+                android:id="@id/weather_fragment_min_temperature_text_view"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@id/forecast_view_description_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@id/forecast_view_time_of_day_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="20sp" />
 
             <ImageView
-                android:id="@id/forecast_view_weather_icon_image_view"
+                android:id="@id/weather_display_weather_icon_image_view"
                 android:layout_width="100sp"
                 android:layout_height="100sp"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="@string/weather_icon"
-                android:gravity="center" />
+                android:contentDescription="@string/weather_icon" />
+
+            <TextView
+                android:id="@id/weather_fragment_max_temperature_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+
+        <LinearLayout
+            android:id="@id/forecast_fragment_humidity_and_pressure_details_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/forecast_fragment_wind_details_linear_layout"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@id/weather_display_pressure_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@id/weather_display_humidity_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@id/weather_display_forecast_time_of_day_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/weather_display_detailed_description_text_view"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
