--- a/app/src/main/res/layout/fragment_forecast_display.xml
+++ b/app/src/main/res/layout/fragment_forecast_display.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@id/forecast_fragment_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
-</LinearLayout>
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@id/forecast_fragment_floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16sp"
+        android:elevation="12dp"
+        android:src="@drawable/ic_autorenew_black_24dp"
+        app:backgroundTint="@color/white"
+        app:fabSize="normal" />
+</android.support.design.widget.CoordinatorLayout>
