--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -11,60 +11,83 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@id/forecast_view_temperature_text_view"
+            android:id="@id/weather_display_current_temperature_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/forecast_view_weather_icon_image_view"
+            android:layout_above="@id/weather_fragment_center_linear_layout"
             android:layout_alignParentStart="true"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="20sp" />
-
+            android:textSize="35sp" />
 
         <LinearLayout
+            android:id="@id/weather_fragment_pressure_and_wind_details_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/forecast_view_description_text_view"
+            android:layout_below="@id/weather_fragment_center_linear_layout"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@id/forecast_view_wind_text_view"
+                android:id="@id/weather_display_wind_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <TextView
-                android:id="@id/forecast_view_pressure_text_view"
+                android:id="@id/weather_display_pressure_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
-
         <TextView
-            android:id="@id/forecast_view_description_text_view"
+            android:id="@id/weather_display_detailed_description_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/forecast_view_weather_icon_image_view"
+            android:layout_below="@id/weather_fragment_pressure_and_wind_details_linear_layout"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="25sp" />
 
-
-        <ImageView
-            android:id="@id/forecast_view_weather_icon_image_view"
-            android:layout_width="100sp"
-            android:layout_height="100sp"
+        <LinearLayout
+            android:id="@id/weather_fragment_center_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:contentDescription="@string/weather_icon" />
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@id/weather_fragment_min_temperature_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+            <ImageView
+                android:id="@id/weather_display_weather_icon_image_view"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
+                android:contentDescription="@string/weather_icon" />
+
+            <TextView
+                android:id="@id/weather_fragment_max_temperature_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
